<resources>
    <string name="app_name">YourReciepe</string>
    <string name="title_all_dishes">All Dishes</string>
    <string name="title_favorite_dishes">Favorite</string>
    <string name="title_random_dishes">Random Dish</string>
    <string name="application_name">Your Recipe</string>
    <string name="hint">Hint</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="ingredient">Ingredient</string>
    <string name="cooking_time_in_minutes">Cooking time in minutes</string>
    <string name="direction_to_cook">Direction to cook</string>
    <string name="add_dish">Add Dish</string>
    <string name="dish_image">Dish Image</string>
    <string name="add_dish_image">Add Dish Image</string>
    <string name="select_image">Select Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="noDishesAdded">No dishes added yet</string>
    <string name="noFaveDishAdded">No Favorite dish yet</string>
    <string name="dishesImage">dishes image</string>
    <string name="dish_details">Dish Details</string>
    <string name="lbl_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes.</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_direction_to_cook">Direction To Cook</string>
    <string name="image_contentDescription">image</string>
    <string name="menu_more">Menu More</string>
    <string name="delete_dish">Delete Dish</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="lbl_update_dish">Update Dish</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="select_item_to_filter">Select item to filter</string>
    <string name="no_dish_exist">There is no dish with this type</string>
    <string name="added_to_favorite">You have already added the dish to your favorite</string>
    <string name="please_wait">Please Wait!!</string>
    <string name="share">Share</string>
    <string name="notification_title">Checkout new dish recipes</string>
    <string name="notification_subtitle">Tap for more detail</string>
    <string name="added_dish">You already added this dish</string>

</resources>