<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_dishes">

    <fragment
        android:id="@+id/navigation_all_dishes"
        android:name="ir.saharapps.yourreciepe.view.fragment.AllDishesFragment"
        android:label="@string/title_all_dishes"
        tools:layout="@layout/fragment_all_dishes" >
        <action
            android:id="@+id/action_navigation_all_dishes_to_dishDetailsFragment"
            app:destination="@id/dishDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite_dishes"
        android:name="ir.saharapps.yourreciepe.view.fragment.FavoriteDishFragment"
        android:label="@string/title_favorite_dishes"
        tools:layout="@layout/fragment_favorite_dish" >
        <action
            android:id="@+id/action_navigation_favorite_dishes_to_dishDetailsFragment"
            app:destination="@id/dishDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_random_dishes"
        android:name="ir.saharapps.yourreciepe.view.fragment.RandomDishFragment"
        android:label="@string/title_random_dishes"
        tools:layout="@layout/fragment_randosm_dish" />
    <fragment
        android:id="@+id/dishDetailsFragment"
        android:name="ir.saharapps.yourreciepe.view.fragment.DishDetailsFragment"
        android:label="fragment_dish_details"
        tools:layout="@layout/fragment_dish_details">
        <argument
            android:name="dishDetails"
            app:argType="ir.saharapps.yourreciepe.model.entities.FavDish"
            />
    </fragment>
</navigation>