<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.RandomDishFragment">

    <ScrollView
        android:id="@+id/scroll_randomFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".view.fragments.DishDetailsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_randomFragment_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_randomFragment_dishImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:background="@color/dish_image_background"
                    android:contentDescription="@string/image_contentDescription"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/favorite_button_background"
                    android:elevation="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/img_randomFragment_favoriteDish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image_contentDescription"
                        android:src="@drawable/ic_favorite_unselected" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/txt_randomFragment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fl_randomFragment_image"
                android:layout_margin="@dimen/_10sdp"
                android:textColor="@color/blue_grey_900"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                tools:text="Dish Title" />

            <TextView
                android:id="@+id/txt_randomFragment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_randomFragment_title"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_16sdp"
                tools:text="Type" />

            <TextView
                android:id="@+id/txt_randomFragment_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_randomFragment_type"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/grey_500"
                android:textSize="@dimen/_14sdp"
                tools:text="Category" />

            <TextView
                android:id="@+id/txt_randomFragment_ingredientsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_randomFragment_category"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/lbl_ingredients"
                android:textColor="@color/blue_grey_900"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_randomFragment_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_randomFragment_ingredientsLabel"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_14sdp"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/txt_randomFragment_directionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_randomFragment_ingredients"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/lbl_direction_to_cook"
                android:textColor="@color/blue_grey_900"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_randomFragment_cookingDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_randomFragment_directionLabel"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColor="@color/grey_900"
                android:textSize="@dimen/_14sdp"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/txt_randomFragment_cookingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_randomFragment_cookingDirection"
                android:layout_margin="@dimen/_16sdp"
                android:gravity="center"
                android:textColor="@color/grey_500"
                android:textSize="@dimen/_12sdp"
                tools:text="@string/lbl_estimate_cooking_time" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>